sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: illegal start of simple pattern
		for(var i:Int <-0 to i<(getNombreValeurs()-1) by 1){
                    ^AlgBubbleSort1:16: error: '<-' expected but '}' found.
	}
        ^